RC v3 commit